--- a/app/src/main/res/drawable/rounded_textinput.xml
+++ b/app/src/main/res/drawable/rounded_textinput.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="2dp"
-        android:color="#FF6200EE" /> <!-- Border color -->
-    <corners android:radius="16dp" /> <!-- Rounded corners -->
+        android:color="#056D64" /> <!-- Border color -->
+
+    <corners android:radius="10dp" /> <!-- Rounded corners -->
 </shape>
