--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,10 @@
 
 
         <TextView
-            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
+            android:layout_marginTop="20dp"
             android:text="IMC Calculator"
             android:textColor="@color/white"
             android:textSize="24dp"
@@ -38,6 +38,7 @@
 
         <TextView
             android:layout_width="273dp"
+            android:textColor="@color/white"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:text="Use this app to calculate your IMC and find out if you need to work out"
@@ -59,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:textColor="@color/white"
         android:text="Calculate"
         android:backgroundTint="@color/primary_400"
         app:layout_constraintBottom_toBottomOf="parent"
