--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -30,6 +30,7 @@
         <TextView
             android:layout_width="273dp"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:layout_marginStart="30dp"
             android:text="Find out below your IMC Index"
             android:textStyle="italic"></TextView>
@@ -39,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:gravity="center"
+            android:textColor="@color/white"
             android:maxLength="5"
             android:textSize="52sp"
             android:textStyle="bold"
